# uk-power-flow-to-solar-capacity

./: .gitignore  Dockerfile  README.md  config.yaml  inference.py  pyproject.toml  run.py  training.py
.github/workflows/: branch_ci.yml  ci.yml  merged_ci.yml
conf/: config.yaml
configs/: merge_map.yaml  preprocess.yaml
configs/boosting/: boosting.yaml
configs/capacity_estimation/: brute_force.yaml  historical_analogue.yaml  on_mainfold.yaml
configs/nhits/: nhits_model.yaml
configs/tft/: tft_model.yaml
process/: merge_map.py  plots.py  preprocess.py  sanity.py  utils.py
src/: data_loader.py  feature_engineering.py  modeling.py  preprocessing.py  scenario_generation_a.py  scenario_generation_b.py  utils.py
src/boosting/: data.py  model.py  train.py  utils.py
src/capacity_estimation/: historical_analogue.py
src/capacity_estimation/brute_force/: brute_force.py  brute_force_utils.py
src/capacity_estimation/on_manifold/: data_utils.py  model_utils.py  run.py  sampler.py
src/cnn/: evaluation.py  model.py  training.py
src/lstm/: data_preperation.py  evaluation.py  model.py  training.py
src/nhits/: data.py  model.py  train.py  utils.py
src/power_forecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tft/: config_tft_initial.yaml  data.py  feature_analysis.py  infer.py  model.py  model_optimisation.py  model_train_infer.py  plotting.py  ray_analysis.py  run_simulation.py  scenario_simulation.py  train.py  tune.py  utils.py
src/tft/scenario_simulation/: analyser.py  plots.py  scenario_simulation.py  scenario_simulation_historical_analogue.py
src/tft/validation/: scenario_simulation.py  utils.py  validation_one.py  validation_three.py  validation_two.py  validation_two_initial.py  validation_two_secondary.py
tests/: conftest.py  test_config.yaml  test_data_loader.py  test_feature_engineering.py  test_modeling.py  test_preprocessing.py  test_scenario_simulation.py
tests/boosting/: test_pipeline.py
tests/capacity_estimation/: test_brute_force.py  test_historical_analogue.py  test_on_manifold.py
tests/nhits/: test_pipeline.py
tests/process/: test_merge_map.py  test_preprocess.py  test_sanity.py
tests/test_data/: power.csv  sites.csv
tests/tft/: test_data.py  test_infer.py  test_model.py  test_train.py
